# Client

./: CMakeLists.txt
Resources/Font/: Primary.arfont
Resources/Pipeline/: Sprite.shader  Sprite_Alpha.effect
Resources/World/: 0-0.region  0-1.region  0-10.region  0-11.region  0-12.region  0-13.region  0-14.region  0-15.region  0-16.region  0-17.region  0-18.region  0-19.region  0-2.region  0-20.region  0-21.region  0-22.region  0-23.region  0-24.region  0-25.region  0-26.region  0-27.region  0-28.region  0-29.region  0-3.region  0-30.region  0-31.region  0-32.region  0-33.region  0-34.region  0-35.region  0-36.region  0-37.region  0-38.region  0-39.region  0-4.region  0-40.region  0-41.region  0-42.region  0-43.region  0-44.region  (+2174 more)
Source/: CMakeLists.txt
Source/Private/: Client.cpp  Client.hpp  Main.cpp
Source/Private/Endpoint/: LobbyPackets.cpp  LobbyPackets.hpp  LobbyProtocol.cpp  LobbyProtocol.hpp
Source/Private/Foundation/: Activity.cpp  Activity.hpp  Application.cpp  Application.hpp
Source/Private/Foundation/Game/: Game.cpp  Game.hpp  GamePackets.cpp  GamePackets.hpp
Source/Private/Foundation/Gateway/: Gateway.cpp  Gateway.hpp  GatewayPackets.hpp
Source/Private/Foundation/Lobby/: Lobby.cpp  Lobby.hpp  LobbyPackets.hpp
Source/Private/Game/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Character.cpp  Character.hpp  Collider.cpp  Collider.hpp  Controller.cpp  Controller.hpp  Director.cpp  Director.hpp  Drawable.cpp  Drawable.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Grid.cpp  Grid.hpp  Object.cpp  Object.hpp  Partitioner.cpp  Partitioner.hpp  Region.cpp  Region.hpp  RegionLoader.cpp  RegionLoader.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
Source/Private/Gameplay/Gateway/: Gateway.cpp  Gateway.hpp  GatewayPackets.cpp  GatewayPackets.hpp
Source/Private/World/: Animation.hpp  Animator.cpp  Animator.hpp  Character.cpp  Character.hpp  Collider.cpp  Collider.hpp  Director.cpp  Director.hpp  Drawable.cpp  Drawable.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Object.cpp  Object.hpp  Partitioner.cpp  Partitioner.hpp  Region.cpp  Region.hpp  RegionLoader.cpp  RegionLoader.hpp  Tile.hpp  Universe.cpp  Universe.hpp  World.cpp  World.hpp
